--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@clerk/nextjs": "5.0.0-beta.43",
     "@t3-oss/env-nextjs": "^0.9.2",
+    "@uploadthing/react": "^6.4.4",
     "@vercel/postgres": "^0.8.0",
     "drizzle-orm": "^0.29.4",
     "next": "^14.1.3",
     "postgres": "^3.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "uploadthing": "^6.9.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
