--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,23 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
+POSTGRES_URL="..."
+POSTGRES_PRISMA_URL="..."
+POSTGRES_URL_NO_SSL="..."
+POSTGRES_URL_NON_POOLING="..."
+POSTGRES_USER="..."
+POSTGRES_HOST="..."
+POSTGRES_PASSWORD="..."
+POSTGRES_DATABASE="..."
 
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="..."
+CLERK_SECRET_KEY="..."
 
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
+UPLOADTHING_SECRET="..."
+UPLOADTHING_APP_ID="..."
 
-# Drizzle
-POSTGRES_URL="postgresql://postgres:password@localhost:5432/gallery"
+SENTRY_DSN="..."
+SENTRY_AUTH_TOKEN="..."
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+NEXT_PUBLIC_POSTHOG_KEY="..."
+NEXT_PUBLIC_POSTHOG_HOST="..."
+
+UPSTASH_REDIS_REST_URL="..."
+UPSTASH_REDIS_REST_TOKEN="..."
